tests/ui/derive_specifier/out_of_bounds.stderr
error[E0277]: the trait bound `False: SpecifierHasAtMost128Bits` is not satisfied
 --> tests/ui/derive_specifier/out_of_bounds.rs:4:1
  |
4 | #[derive(Specifier, Debug)]
  | ^ the trait `SpecifierHasAtMost128Bits` is not implemented for `False`
  |
  = help: the trait `SpecifierHasAtMost128Bits` is implemented for `True`
note: required by a bound in `CheckSpecifierHasAtMost128Bits::CheckType`
 --> src/private/checks.rs
  |
  |     <Self::CheckType as DispatchTrueFalse>::Out: SpecifierHasAtMost128Bits,
  |                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CheckSpecifierHasAtMost128Bits::CheckType`
  | {
  |     type CheckType: DispatchTrueFalse;
  |          --------- required by a bound in this associated type

error[E0277]: the trait bound `False: SpecifierHasAtMost128Bits` is not satisfied
 --> tests/ui/derive_specifier/out_of_bounds.rs:4:1
  |
4 | #[derive(Specifier, Debug)]
  | ^ the trait `SpecifierHasAtMost128Bits` is not implemented for `False`
  |
  = help: the trait `SpecifierHasAtMost128Bits` is implemented for `True`
note: required by a bound in `CheckSpecifierHasAtMost128Bits`
 --> src/private/checks.rs
  |
  | pub trait CheckSpecifierHasAtMost128Bits
  |           ------------------------------ required by a bound in this trait
  | where
  |     <Self::CheckType as DispatchTrueFalse>::Out: SpecifierHasAtMost128Bits,
  |                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `CheckSpecifierHasAtMost128Bits`
  = note: `CheckSpecifierHasAtMost128Bits` is a "sealed trait", because to implement it you also need to implement `modular_bitfield::private::checks::SpecifierHasAtMost128Bits`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following type implements the trait:
            modular_bitfield::private::checks::True

error[E0277]: the trait bound `BitCount<136>: ArrayBytesConversion` is not satisfied
 --> tests/ui/derive_specifier/out_of_bounds.rs:4:1
  |
4 | #[derive(Specifier, Debug)]
  | ^ the trait `ArrayBytesConversion` is not implemented for `BitCount<136>`
  |
  = help: the following other types implement trait `ArrayBytesConversion`:
            BitCount<104>
            BitCount<112>
            BitCount<120>
            BitCount<128>
            BitCount<16>
            BitCount<24>
            BitCount<32>
            BitCount<40>
          and $N others
